# Nq

./: .gitignore  .graphifyignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
benchmarks/: .gitkeep  bench_reconstruction.py
configs/: default.toml  fail_breakout.toml  fail_fvg.toml  research.toml  vp_auction.toml
data/: .gitkeep
docs/: architecture.md  data_contracts.md  deep_leakage_and_integrity_audit.md  f001_f005_remediation_report.md  f006_f014_remediation_report.md  final_adversarial_quant_audit.md  final_quant_hardening_report.md
docs/deep_audit/: 00_baseline.md  01_graphify_baseline.md  02_system_architecture_audit.md  03_master_quant_audit.md  04_graphify_after_repairs.md  05_final_verification_report.md
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_health.json  .graphify_health_current.json  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_HEALTH.txt  GRAPH_REPORT.md  graph.html  graph.json
graphify-out/2026-07-23/: cost.json  graph.json  manifest.json
scripts/: run_fail_breakout.py  run_fail_fvg.py  run_vp_auction.py  run_week.py
tests/: mbo_factory.py  test_alpha.py  test_auction.py  test_book.py  test_breakout.py  test_core.py  test_coverage.py  test_cross_market.py  test_cross_market_latency.py  test_databento.py  test_depth_lifecycle.py  test_execution.py  test_fail_fvg_strategy.py  test_feature_store.py  test_footprint.py  test_fvg.py  test_fvg_hypothesis_search.py  test_ingestion.py  test_integrity.py  test_invariants.py  test_leakage.py  test_liquidity.py  test_masking_structural.py  test_mbo_contract.py  test_models_pipeline.py  test_models_splitting.py  test_models_ssl.py  test_orchestrator.py  test_orchestrator_leakage_regressions.py  test_order_flow.py  test_pipeline_progress.py  test_reconstruction.py  test_reconstruction_causality.py  test_research.py  test_session.py  test_ssl_enhancements.py  test_states.py  test_statistics.py  test_streaming_features.py  test_temporal_policy.py  (+3 more)
(+86 files in other folders)
