[project]
name = "nq"
version = "0.0.0"
description = "MBO-only quantitative market-microstructure research engine for NQ / MNQ."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "numpy>=1.26",
    "polars>=1.0",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "hypothesis>=6.100",
]
data = [
    "zstandard>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nq"]

# ---------------------------------------------------------------------------
# Tooling: enforces the governing principles (rigor, determinism, clean code).
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Strict, science-grade linting. E/F=pyflakes+pycodestyle, I=isort, B=bugbear,
# UP=pyupgrade, SIM=simplify, RUF=ruff-specific, PL=pylint, NPY=numpy.
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "PL", "NPY"]
ignore = [
    "PLR0913",              # allow explicit multi-arg scientific signatures
    "RUF001", "RUF002", "RUF003",  # Arabic docs + math symbols (×, Σ) are intentional
]

[tool.ruff.lint.per-file-ignores]
# الاختبارات تقارن بقيم متوقّعة حرفية (idiomatic)؛ لا داعي لثوابت مسمّاة لها.
"tests/**" = ["PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "leakage: tests that prove absence of temporal leakage",
    "benchmark: performance/throughput measurements",
]

[tool.coverage.run]
branch = true
source = ["src/nq"]
